@@ -78,7 +78,7 @@ void i_silc_client_deinit(SilcClient client, SilcClientConnection conn)
 
 void i_silc_client_nickname_parse(const char *nickname, char **return_nickname)
 {
-	*return_nickname = strdup(nickname);
+	*return_nickname = i_strdup(nickname);
 }
 
 bool i_silc_client_id_is_me(struct i_silc_gateway_connection *silc_gwconn,
